--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         />
         <meta property="og:type" content="website" />
         <meta property="fb:app_id" content="189309987769660" />
-        <meta
+        <!-- <meta
             property="og:image"
             content="https://cache.vtrcdn.com/orion/images/logos/logo-viator-facebook.webp"
-        />
+        /> -->
         <meta
             property="og:title"
             content="Viator: Travel Tours, Activities, and Things to Do | 2025"
@@ -47,7 +47,7 @@
         <link
             rel="shortcut icon"
             type="image/ico"
-            href="https://cache.vtrcdn.com/orion/images/favicon.ico"
+            href="./img/pls.png"
         />
         <link
             rel="preconnect"
@@ -275,7 +275,7 @@
             };
         </script>
         <script src="https://dd.viator.com/tags.js" async=""></script>
-        <title>Viator: Travel Tours, Activities, and Things to Do | 2025</title>
+        <title>Bookandgo</title>
         <link
             rel="stylesheet"
             href="https://cache.vtrcdn.com/orion/react/client/css/header.7fc84fe4cbea360e.css"
